# traffic_consultation

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README_EN.md
benchmark/: gen_scale_data.py
inc/algo/: dijkstra.h
inc/data/: transport_data.h
inc/domain/model/: domain_types.h  query_request.h  user.h
inc/io/: file_io.h
inc/model/: query_request.h  transport_type.h
inc/tools/: time_process.h
src/: main.cpp
src/algo/: dijkstra.cpp
src/application/: auth_service.cpp  auth_service.h  consult_controller.cpp  consult_controller.h
src/data/: transport_data.cpp
src/domain/algorithm/: dijkstra.cpp  dijkstra.h
src/domain/data/: transport_data.cpp  transport_data.h  user_repository.cpp  user_repository.h
src/domain/tools/: time_process.cpp  time_process.h
src/infrastructure/: file_config.cpp  file_config.h  file_io.cpp  file_io.h
src/io/: file_io.cpp
src/presentation/: main.cpp  menu.cpp  menu.h
src/tools/: time_process.cpp
tests/: algo_layer_test.cpp  algorithm_scale_test.cpp  controller_test.cpp  data_layer_test.cpp  file_io_test.cpp  integration_test.cpp  query_request_test.cpp  scale_bench.cpp  scale_bench_multi.cpp  time_process_test.cpp  transport_type_test.cpp
